# vlm_f1tenth

./: README.md
images/: system_architecture.drawio
llm_src/: llm_rosbridge_client.py  mic_test.py  test_video.py  vlm_client_node2.py
ros2_ws/src/decision_maker/: setup.py
ros2_ws/src/decision_maker/decision_maker/: decision_node.py
ros2_ws/src/overtake_decision/: CMakeLists.txt  package.xml
ros2_ws/src/particle_filter/launch/: localize_launch.py
ros2_ws/src/speech_to_text/: package.xml  setup.py
ros2_ws/src/stanley_controller/: add_raceline_column.py
scripts/: client.py  vlm_client_node.py
src/decision_maker/: package.xml
src/decision_maker/decision_maker/: decision_node.py
src/overtake_decision/launch/: overtake_launch.py
src/overtake_decision/src/: DecisionNode.cpp
src/particle_filter/config/: localize.yaml
src/particle_filter/maps/: FTMHalle_ws25.pgm  FTM_clean_ws25.yaml  map_async.yaml
src/ros2_nanovlm/ros2_nanovlm/: package.xml  setup.py
src/speech_to_text/speech_to_text/: speech_node.py
src/stanley_controller/: CMakeLists.txt  package.xml
src/stanley_controller/include/stanley_control/: StanleyController.hpp
src/stanley_controller/launch/: stanley_launch.py
src/stanley_controller/racelines/: center_curve.csv  left.csv  raceline_small.csv
src/stanley_controller/src/: StanleyController.cpp
src/vlm_package/: setup.py
src/vlm_package/config/: config.yaml
src/vlm_package/launch/: camera_input.launch.py
src/vlm_package/vlm_package/: vlm_node.py
vlm_llm_source/: README.md  llm_server.py  llm_test.py  requirements.txt  test_mlx.py  test_with_image.py  vlm_server.py  vlm_server_mlx.py  vlm_server_mlx_preview.py
(+60 files in other folders)
